# pynitrokey

./: .editorconfig  .envrc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG-parent.md  Dockerfile  Earthfile  MAINTAINERS.md  Makefile  README-parent.md  README.md  RELEASE.md  build-wine.sh  ci-requirements.txt  dev-requirements.txt  firmware-nk3xn-lpc55-v1.0.1.sb2  interactive_test.sh  mypy.ini  nethsm-api.yaml  nethsm-scheme.json  nitropy.py  poetry.toml  pyproject.toml  test_ccid.py  win_setup.py
.circleci/: config.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: cd-linux.yaml  cd-pypi.yaml  cd-windows.yaml  ci.yaml  nightly.yaml  tags.yaml
.pip/: pip.conf
ci-scripts/: .pypirc_tamplate  nightly_upload.sh  nitropy.py  pull.sh  pyinstaller.spec  release.sh
ci-scripts/linux/pyinstaller/: pynitrokey-onedir.spec  pynitrokey-onefile.spec
ci-scripts/pypi/: .pypirc_template
ci-scripts/windows/pyinstaller/: file_version_info_metadata.yaml  pynitrokey-onedir.spec  pynitrokey-onefile.spec
ci-scripts/windows/wix/: Product.wxs
docs/: developer-guide.md  developer-guide.rst  packaging.md  packaging.rst
keys/: 463D8C09EC635FC7DA5681439C44D117B05429AC.asc  868184069239FF65DE0BCD7DD9BAE35991DE5B22.asc  93CCB0DB717DAE30622F671436DA48A4C827B354.asc  97591008D82D0751EF438D35804551D1A83A3C83.asc  CC74B7120BFAA36FF42868724C1449F1C9804176.asc  D39559AD0E43740B1B87ADC7698E72AB2C0C10F7.asc  F7358F6C1091FE15183B9E11F10D7A10C57B52EA.asc
pynitrokey/: VERSION  VERSION.license  __init__.py  client.py  confconsts.py  conftest.py  exceptions.py  helpers.py  hmac_secret.py  libnk.py  nkpk.py  test_otp.py  test_secrets_app.py  tlv.py  updates.py
pynitrokey/cli/: __init__.py  _patches.py  exceptions.py  fido2.py  monitor.py  nethsm.py  nk3.py  nkfido2.py  nkpk.py  pro.py  program.py  start.py  storage.py  trussed.py  update.py
pynitrokey/cli/nk3/: __init__.py  pcsc_absent.py  piv.py  secrets.py  test.py  update.py
pynitrokey/cli/nkpk/: __init__.py  update.py
pynitrokey/cli/trussed/: __init__.py  test.py  tests.py  update.py
pynitrokey/fido2/: __init__.py  client.py  commands.py  dfu.py  hmac_secret.py  operations.py
pynitrokey/nethsm/: __init__.py
pynitrokey/nethsm/client/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  model_utils.py  rest.py  schemas.py  server.py
pynitrokey/nethsm/client/api/: __init__.py  default_api.py
pynitrokey/nethsm/client/apis/: __init__.py  path_to_api.py  tag_to_api.py
pynitrokey/nethsm/client/configurations/: api_configuration.py  schema_configuration.py
pynitrokey/nethsm/client/model/: __init__.py  backup_passphrase_config.py  backup_passphrase_config.pyi  base64.py  base64.pyi  decrypt_data.py  decrypt_data.pyi  decrypt_mode.py  decrypt_mode.pyi  decrypt_request_data.py  decrypt_request_data.pyi  distinguished_name.py  distinguished_name.pyi  encrypt_data.py  encrypt_data.pyi  encrypt_mode.py  encrypt_mode.pyi  encrypt_request_data.py  encrypt_request_data.pyi  health_state_data.py  health_state_data.pyi  id.py  id.pyi  info_data.py  info_data.pyi  key_algorithm.py  key_generate_request_data.py  key_generate_request_data.pyi  key_item.py  key_item.pyi  key_list.py  key_list.pyi  key_mechanism.py  key_mechanism.pyi  key_mechanisms.py  key_mechanisms.pyi  key_private_data.py  key_private_data.pyi  key_public_data.py  key_public_data.pyi  (+67 more)
pynitrokey/nethsm/client/models/: __init__.py  backup_passphrase_config.py  decrypt_data.py  decrypt_mode.py  decrypt_request_data.py  distinguished_name.py  encrypt_data.py  encrypt_mode.py  encrypt_request_data.py  health_state_data.py  info_data.py  key_generate_request_data.py  key_item.py  key_mechanism.py  key_private_data.py  key_public_data.py  key_restrictions.py  key_type.py  log_level.py  logging_config.py  network_config.py  private_key.py  provision_request_data.py  public_key.py  random_data.py  random_request_data.py  sign_data.py  sign_mode.py  sign_request_data.py  switch.py  system_info.py  system_state.py  system_update_data.py  time_config.py  tls_key_generate_request_data.py  tls_key_type.py  unattended_boot_config.py  unlock_passphrase_config.py  unlock_request_data.py  user_data.py  (+4 more)
pynitrokey/nethsm/client/paths/: __init__.py
pynitrokey/nethsm/client/schemas/: schema.py  schemas.py  validation.py
pynitrokey/nk3/: __init__.py  admin_app.py  base.py  bootloader.py  debug_app.py  device.py  exceptions.py  helpers.py  otp_app.py  piv_app.py  provisioner_app.py  secrets_app.py  updates.py  utils.py
pynitrokey/nk3/bootloader/: __init__.py  lpc55.py  nrf52.py
pynitrokey/nk_headers/: NK_C_API__3.4.0.h  NK_C_API__3.5.0.h  NK_C_API__3.6.0.h
pynitrokey/pro/: gnuk_token.py  upgrade_by_passwd.py  usb_strings.py
pynitrokey/start/: gnuk_token.py  kdf_calc.py  rsa.py  rsa_pub_key.py  threaded_log.py  upgrade_by_passwd.py  usb_strings.py
pynitrokey/stubs/: tqdm.pyi
pynitrokey/stubs/fido2/: attestation.pyi  cbor.pyi  client.pyi  ctap.pyi  ctap1.pyi  ctap2.pyi  server.pyi  webauthn.pyi
pynitrokey/stubs/mboot/: __init__.pyi  connection.pyi
pynitrokey/stubs/nordicsemi/: __init__.pyi
pynitrokey/stubs/smartcard/: CardConnection.pyi  Exceptions.pyi  System.pyi
pynitrokey/trussed/: __init__.py  admin_app.py  base.py  device.py  exceptions.py  provisioner_app.py  utils.py
pynitrokey/trussed/bootloader/: __init__.py  lpc55.py  nrf52.py
solo/: client.py  operations.py
solo/cli/: __init__.py  fido2.py  monitor.py  start.py  update.py
solo/start/: gnuk_token.py  rsa.py  upgrade_by_passwd.py  usb_strings.py
stubs/: ecdsa.pyi  intelhex.pyi  serial.pyi  tlv8.pyi  usb1.pyi
stubs/nkdfu/: __init__.pyi  dfu.pyi
stubs/nordicsemi/dfu/: dfu_transport_serial.pyi  manifest.pyi
stubs/nordicsemi/lister/: device_lister.pyi
stubs/smartcard/: Card.pyi  CardConnection.pyi  Exceptions.pyi  System.pyi
stubs/usb/: __init__.pyi  core.pyi
tools/: transform_nethsm_api_spec.py
wine-build/: Dockerfile  Makefile  build-wine-docker.sh  entrypoint.sh  nitropy.spec  nitropy.spec.tmpl
(+576 files in other folders)
