# Copyright 2019 SoloKeys Developers
# Copyright Nitrokey GmbH
# SPDX-License-Identifier: Apache-2.0 OR MIT

[build-system]
requires = ["poetry-core >=1,<3"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pynitrokey"
version = "0.9.2"
description = "Python client for Nitrokey devices"
license = { text = "Apache-2.0 OR MIT" }
authors = [
  { name = "Nitrokey", email = "pypi@nitrokey.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["classifiers"]
dependencies = [
  "cffi",
  "click >=8.1.6, <9",
  "cryptography >=43,<46",
  "ecdsa",
  "fido2 >=2,<3",
  "hidapi >=0.14,<0.15",
  # Limit hidapi on Linux to versions using the hidraw backend, see
  # https://github.com/Nitrokey/pynitrokey/issues/601
  "hidapi >=0.14.0.post1, <0.14.0.post4 ; sys_platform == 'linux'",
  "intelhex",
  "nkdfu",
  "nitrokey >=0.3.1,<0.4",
  "pyusb",
  "requests",
  "tqdm",
  "tlv8",
  "click-aliases >=1.0.5, <2",
  "semver",
  "nethsm >=1.4.0, <2",
]

[project.optional-dependencies]
pcsc = ["pyscard >=2.0.0,<3"]

[project.urls]
repository = "https://github.com/Nitrokey/pynitrokey"

[project.scripts]
nitropy = "pynitrokey.cli:main"

[tool.isort]
py_version = "310"
profile = "black"

[tool.mypy]
mypy_path = "stubs"
show_error_codes = true
python_version = "3.10"
strict = true

# disable strict checks for old code, see
# - https://github.com/python/mypy/issues/11401
# - https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
[[tool.mypy.overrides]]
module = [
    "pynitrokey.cli.pro",
    "pynitrokey.cli.start",
    "pynitrokey.cli.storage",
    "pynitrokey.conftest",
    "pynitrokey.libnk",
    "pynitrokey.start.*",
    "pynitrokey.test_secrets_app",
]
check_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.poetry]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
]

[tool.poetry.dependencies]
python = ">= 3.10, <3.14"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = ">=25, <26"
flake8 = "*"
ipython = "*"
isort = "*"
mypy = ">=1.4,<1.5"
types-cffi = "*"
types-requests = "*"
types-tqdm = "*"
pytest = "*"
pytest-reporter-html1 = "*"
oath = "*"

[tool.poetry.group.pyinstaller]
optional = true

[tool.poetry.group.pyinstaller.dependencies]
pyinstaller = "^6.11.1"
pyinstaller-versionfile = { version = "==3.0.0", markers = "sys_platform=='win32'" }

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)3s] %(message)s"
log_cli_date_format = "%H:%M:%S"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 120
exclude = [
    "venv",
    "start",
    "nk3",
]
target-version = "py310"
