# Copyright 2019 SoloKeys Developers
# Copyright Nitrokey GmbH
# SPDX-License-Identifier: Apache-2.0 OR MIT

[build-system]
requires = ["poetry-core >=1,<3"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pynitrokey"
version = "0.12.2"
description = "Python client for Nitrokey devices"
license = { text = "Apache-2.0 OR MIT" }
authors = [
  { name = "Nitrokey", email = "pypi@nitrokey.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["classifiers"]
dependencies = [
  "cffi >=1.15, <3",
  "click >=8.2, <9",
  "cryptography >=43, <49",
  "fido2 >=2, <3",
  "hidapi >=0.14, <0.15",
  # Limit hidapi on Linux to version using the hidraw backend, see
  # https://github.com/Nitrokey/pynitrokey/issues/601 and
  # https://github.com/Nitrokey/pynitrokey/issues/707
  "hidapi ==0.14.0.post2 ; sys_platform == 'linux'",
  "intelhex >=2.3, <3",
  "libusb1 >=3, <4",
  "nethsm >=2.1.1, <3",
  "nitrokey >=0.4.2, <0.5",
  "nkdfu >=0.2, <0.3",
  "pyusb >=1.2, <2",
  "pyserial >=3.5, <4",
  "requests >=2.16, <3",
  "semver >=3, <4",
  "tqdm >=4.64, <5",
  "tlv8 >=0.10, <0.11",
]

[project.optional-dependencies]
pcsc = ["pyscard >=2, <3"]

[project.urls]
repository = "https://github.com/Nitrokey/pynitrokey"

[project.scripts]
nitropy = "pynitrokey.cli:main"

[tool.mypy]
mypy_path = "stubs"
show_error_codes = true
python_version = "3.10"
strict = true

# disable strict checks for old code, see
# - https://github.com/python/mypy/issues/11401
# - https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
[[tool.mypy.overrides]]
module = [
    "pynitrokey.cli.pro",
    "pynitrokey.cli.start",
    "pynitrokey.cli.storage",
    "pynitrokey.conftest",
    "pynitrokey.libnk",
    "pynitrokey.start.*",
    "pynitrokey.test_secrets_app",
]
check_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.poetry]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
]

[tool.poetry.dependencies]
python = ">= 3.10, <3.15"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "*"
mypy = ">=1.4, <1.5"
ruff = "^0.14"
types-cffi = ">=1.15, <3"
types-requests = ">=2.16, <3"
types-tqdm = ">=4.64, <5"
pytest = ">=8, <9"
pytest-reporter-html1 = "*"
oath = "*"

[tool.poetry.group.pyinstaller]
optional = true

[tool.poetry.group.pyinstaller.dependencies]
pyinstaller = "^6.11.1"
semver = { version = ">=3, <4", markers = "sys_platform=='win32'" }

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)3s] %(message)s"
log_cli_date_format = "%H:%M:%S"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
exclude = ["conftest.py", "libnk.py", "pynitrokey/start/*", "test_secrets_app.py"]
select = ["ANN", "B", "C", "E", "F", "W", "I", "RUF100"]
ignore = ["ANN401", "B904", "E501"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"pynitrokey/cli/pro.py" = ["ANN001", "ANN201"]
"pynitrokey/cli/start.py" = ["ANN001", "ANN201"]
"pynitrokey/cli/storage.py" = ["ANN001", "ANN201"]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.uv]
dev-dependencies = [
    # These dependencies are required for running the type checks.
    "mypy >=1.4, <1.5",
    "pytest >=8, <9",
    "types-cffi >=1.15, <2",
    "types-requests >=2.16, <3",
    "types-tqdm >=4.64, <5",

    # These additional lower bounds are required for --resolution lowest.
    # As these are transitive dependencies, we don’t include them in our dependency list.
    "fire >=0.1.2",
]
